--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-nightly-debian9-test.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-nightly-debian9-test.yml
@@ -1,12 +1,12 @@
 ---
 - job:
-    name: 'foreman-nightly-test'
+    name: 'foreman-nightly-debian9-test'
     project-type: 'pipeline'
     sandbox: true
     dsl:
       !include-raw:
         - pipelines/lib/foremanCentosJob.groovy
-        - pipelines/test/foremanNightlyTest.groovy
+        - pipelines/test/foreman/nightly-debian9.groovy
         - ../theforeman.org/pipelines/lib/duffy.groovy
         - ../theforeman.org/pipelines/lib/ansible.groovy
         - ../theforeman.org/pipelines/lib/folderChanged.groovy
