include release.groovy

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-nightly-deb-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-nightly-deb-pipeline.yaml
@@ -6,6 +6,7 @@
     dsl:
       !include-raw:
         - pipelines/release/foreman-deb.groovy
+        - pipelines/lib/release.groovy
         - pipelines/lib/rvm.groovy
         - pipelines/lib/ansible.groovy
         - pipelines/lib/foreman_infra.groovy
