sandbox our jobs too

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_web.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_web.yaml
@@ -1,6 +1,7 @@
 - job:
     name: deploy_web
     project-type: pipeline
+    sandbox: true
     concurrent: false
     properties:
       - github:
