--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_rpm.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_rpm.yaml
@@ -1,6 +1,7 @@
 - job:
     name: packaging_build_rpm
     project-type: pipeline
+    sandbox: true
     concurrent: true
     parameters:
       - string:
