--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/ci-centos-integration-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/ci-centos-integration-test.yaml
@@ -1,6 +1,7 @@
 - job:
     name: ci-centos-integration-test
     project-type: pipeline
+    sandbox: true
     triggers:
       - timed: 'H 23 * * *'
     dsl:
