--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/katello-devel-forklift-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/katello-devel-forklift-test.yaml
@@ -2,6 +2,7 @@
 - job:
     name: katello-devel-forklift-test
     project-type: pipeline
+    sandbox: true
     triggers:
       - reverse:
           jobs:
