--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/tfm-ror52-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/tfm-ror52-rpm-pipeline.yaml
@@ -2,6 +2,7 @@
 - job:
     name: tfm-ror52-rpm-pipeline
     project-type: pipeline
+    sandbox: true
     concurrent: false
     properties:
       - github:
