--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/puppet-deploy.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/puppet-deploy.yaml
@@ -1,6 +1,7 @@
 - job:
     name: puppet-deploy
     project-type: pipeline
+    sandbox: true
     properties:
       - github:
           url: https://github.com/theforeman/foreman-infra
