--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-packaging-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-packaging-release.yaml
@@ -2,6 +2,7 @@
 - job:
     name: foreman-packaging-release
     project-type: pipeline
+    sandbox: true
     concurrent: false
     properties:
       - github:
