--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_push_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_push_deb.yaml
@@ -2,6 +2,7 @@
 - job:
     name: release_push_deb
     project-type: pipeline
+    sandbox: true
     block-downstream: true
     block-upstream: true
     parameters:
