--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-develop-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-develop-test.yaml
@@ -1,6 +1,7 @@
 - job:
     name: smart-proxy-develop-test
     project-type: pipeline
+    sandbox: true
     concurrent: false
     properties:
       - github:
