--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/tests/foreman-develop-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/tests/foreman-develop-test.yaml
@@ -1,6 +1,7 @@
 - job:
     name: foreman-develop-test
     project-type: pipeline
+    sandbox: true
     quiet-period: 2700
     properties:
       - github_foreman
