--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/tests/katello-pr-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/tests/katello-pr-test.yaml
@@ -1,6 +1,7 @@
 - job:
     name: katello-pr-test
     project-type: pipeline
+    sandbox: true
     concurrent: true
     properties:
       - github:
