--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/foreman-packaging-rpm-pr-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/foreman-packaging-rpm-pr-test.yaml
@@ -2,6 +2,7 @@
 - job:
     name: foreman-packaging-rpm-pr-test
     project-type: pipeline
+    sandbox: true
     properties:
       - github:
           url: https://github.com/theforeman/foreman-packaging
