--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/tfm-ror51-cleanup-copr.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/tfm-ror51-cleanup-copr.yaml
@@ -2,6 +2,7 @@
 - job:
     name: tfm-ror51-cleanup-copr
     project-type: pipeline
+    sandbox: true
     properties:
       - github:
           url: https://github.com/theforeman/tfm-ror51-packaging
