--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-client-nightly-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-client-nightly-rpm-pipeline.yaml
@@ -1,6 +1,7 @@
 - job:
     name: foreman-client-nightly-rpm-pipeline
     project-type: pipeline
+    sandbox: true
     triggers:
       - timed: 'H 21 * * *'
     dsl:
