--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-nightly-deb-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-nightly-deb-pipeline.yaml
@@ -1,6 +1,7 @@
 - job:
     name: foreman-nightly-deb-pipeline
     project-type: pipeline
+    sandbox: true
     triggers:
       - timed: 'H 07 * * 1-5'
     dsl:
