--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/katello-3.9-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/katello-3.9-rpm-pipeline.yaml
@@ -1,6 +1,7 @@
 - job:
     name: katello-3.9-rpm-pipeline
     project-type: pipeline
+    sandbox: true
     dsl:
       !include-raw:
         - pipelines/release/katello/3.9.groovy
