--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/hammer-cli-foreman-master-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/hammer-cli-foreman-master-release.yaml
@@ -1,6 +1,7 @@
 - job:
     name: hammer-cli-foreman-master-release
     project-type: pipeline
+    sandbox: true
     concurrent: false
     properties:
       - github:
