--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-master-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-master-release.yaml
@@ -1,6 +1,7 @@
 - job:
     name: katello-master-release
     project-type: pipeline
+    sandbox: true
     concurrent: false
     triggers:
       - github
