--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/smart-proxy-develop-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/smart-proxy-develop-release.yaml
@@ -1,6 +1,7 @@
 - job:
     name: smart-proxy-develop-release
     project-type: pipeline
+    sandbox: true
     concurrent: false
     properties:
       - github:
