Use common release parameters

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_packages.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_packages.yaml
@@ -5,12 +5,7 @@
     block-downstream: true
     block-upstream: true
     parameters:
-      - string:
-          name: version
-          description: '1.5.2, 1.6.0-RC1 etc.'
-      - string:
-          name: major_version
-          description: '1.5, 1.6 etc.'
+      - release_parameters
     axes:
       - axis:
           type: user-defined
