Include the release lib for deploy_yum
66c997a0c5314f6309a864437c8c3de5daedda30 started to use the library
function but didn't include it.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_yum.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_yum.yaml
@@ -26,5 +26,6 @@
     dsl:
       !include-raw:
         - pipelines/deploy/yum.groovy
+        - pipelines/lib/release.groovy
         - pipelines/lib/rvm.groovy
         - pipelines/lib/foreman_infra.groovy
