Move main Foreman nightly projects to source and package release jobs

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/source/foreman-selinux-source-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/source/foreman-selinux-source-release.yaml
@@ -12,5 +12,7 @@
     dsl:
       !include-raw:
         - pipelines/release/source/foreman-selinux.groovy
+        - pipelines/lib/nightly_packaging.groovy
+        - pipelines/lib/foreman_infra.groovy
         - pipelines/lib/rvm.groovy
         - pipelines/lib/git.groovy
