--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/source/foreman-installer-source-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/source/foreman-installer-source-release.yaml
@@ -1,16 +1,17 @@
 - job:
-    name: foreman-selinux-develop-test
+    name: foreman-installer-develop-source-release
     project-type: pipeline
     sandbox: true
     quiet-period: 600
     properties:
       - github:
-          url: https://github.com/theforeman/foreman-selinux
+          url: https://github.com/theforeman/foreman-installer
     concurrent: false
     triggers:
+      - timed: 'H 3 * * 1-5'
       - github
     dsl:
       !include-raw:
-        - pipelines/test/foreman-selinux-develop-test.groovy
+        - pipelines/release/source/foreman-installer.groovy
         - pipelines/lib/rvm.groovy
         - pipelines/lib/git.groovy
