--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin_matrix.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin_matrix.yaml
@@ -42,7 +42,6 @@
           name: ruby
           values:
             - 2.3
-            - 2.4
             - 2.5
       - axis:
           type: dynamic
@@ -56,7 +55,7 @@
             - fast
     execution-strategy:
       combination-filter: >
-        ((database == 'postgresql') && ((ruby == '2.3') || (ruby == '2.4') || (ruby == '2.5'))) || ((database == 'mysql') && (ruby == '2.5')) || ((database == 'sqlite3') && (ruby == '2.5'))
+        ((database == 'postgresql') && ((ruby == '2.3') || (ruby == '2.5'))) || ((database == 'mysql') && (ruby == '2.5')) || ((database == 'sqlite3') && (ruby == '2.5'))
     wrappers:
       - timestamps
       - abort_build:
