Fix katello-source-release trigger

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/source/katello-master-source-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/source/katello-master-source-release.yaml
@@ -7,8 +7,7 @@
       - github:
           url: https://github.com/Katello/katello
     triggers:
-      - github_pr_pipeline:
-          context: 'katello'
+      - github
     dsl:
       !include-raw:
         - pipelines/release/source/katello.groovy
