--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/katello-devel-forklift-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/katello-devel-forklift-test.yaml
@@ -13,3 +13,5 @@
         - pipelines/test/katelloDevel.groovy
         - pipelines/lib/ansible.groovy
         - pipelines/lib/foreman_infra.groovy
+        - pipelines/lib/rpm_packaging.groovy
+        - pipelines/lib/obal.groovy
