--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/katello-3.12-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/katello-3.12-rpm-pipeline.yaml
@@ -8,3 +8,5 @@
         - pipelines/lib/release.groovy
         - pipelines/lib/ansible.groovy
         - pipelines/lib/foreman_infra.groovy
+        - pipelines/lib/rpm_packaging.groovy
+        - pipelines/lib/obal.groovy
