Add salt to the proxy plugin testing matrix

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin-pull-request.yaml
@@ -48,5 +48,6 @@
       - openscap
       - pulp
       - remote_execution_ssh
+      - salt
     jobs:
       - 'smart-proxy-{plugin}-pull-request'
