--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop_pr_core.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop_pr_core.yaml
@@ -1,7 +1,7 @@
 - job:
     name: test_proxy_develop_pr_core
     description: |
-      Tests a Smart Proxy pull request under each Ruby and Puppet configuration.
+      Tests a Smart Proxy pull request under each Ruby.
     project-type: matrix
     concurrent: true
     properties:
@@ -27,15 +27,7 @@
             - '2.0.0'
             - '2.3'
             - '2.5'
-      - axis:
-          type: user-defined
-          name: puppet
-          values:
-            - '3.8.0'
-            - '4.10.0'
-            - '5.0'
-    execution-strategy:
-      combination-filter: '( ruby == "2.0.0" && puppet ==~ /[34]\..*/ ) || ( ruby == "2.3" && puppet == "4.10.0" ) || ( ruby ==~ /2\.[45].*/ && puppet == "5.0" )'
+            - '2.6'
     wrappers:
       - timeout:
           type: absolute
