Correctly start Jenkins jobs via Ansible
The URL depends on whether the job is parametrized. It's also needed to
pass parameters as GET parameters.

--- a/puppet/modules/jenkins_job_builder/files/centos.org/ansible/jenkins_job.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/ansible/jenkins_job.yml
@@ -7,7 +7,6 @@
     jenkins_username: ''
     jenkins_password: ''
     jenkins_job_token: ''
-    jenkins_job_parameters: {}
   tasks:
     - name: "Query Jenkins job queue until job has started"
       uri:
@@ -25,6 +24,15 @@
     - debug:
         msg: "{{ crumb.json.crumb }}"
 
+    - name: "Set facts for build"
+      set_fact:
+        jenkins_build_url: "{{ jenkins_host }}/job/{{ jenkins_job_name }}/build?TOKEN={{ jenkins_job_token }}"
+
+    - name: "Set facts for parametrized build"
+      set_fact:
+        jenkins_build_url: "{{ jenkins_host }}/job/{{ jenkins_job_name }}/buildWithParameters?TOKEN={{ jenkins_job_token }}&{{ jenkins_job_parameters|urlencode }}"
+      when: jenkins_job_parameters is defined
+
     - name: "Start Jenkins job"
       uri:
         force_basic_auth: yes
@@ -36,9 +44,7 @@
         status_code: 201
         user: "{{ jenkins_username }}"
         password: "{{ jenkins_password }}"
-        url: "{{ jenkins_host }}/job/{{ jenkins_job_name }}/buildWithParameters?TOKEN={{ jenkins_job_token }}"
-        body: "{{ jenkins_job_parameters }}"
-        body_format: "json"
+        url: "{{ jenkins_build_url }}"
       register: start_job_result
 
     - debug:
