--- a/.gitmodules
+++ b/.gitmodules
@@ -147,3 +147,6 @@
 [submodule "puppet/modules/yum_cron"]
 	path = puppet/modules/yum_cron
 	url = https://github.com/treydock/puppet-yum_cron.git
+[submodule "puppet/modules/mailalias_core"]
+	path = puppet/modules/mailalias_core
+	url = https://github.com/puppetlabs/puppetlabs-mailalias_core.git
