fix jinja template for downloading artifacts

--- a/puppet/modules/jenkins_job_builder/files/centos.org/ansible/jenkins_job.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/ansible/jenkins_job.yml
@@ -105,7 +105,7 @@
 
     - name: "Create artifacts directory"
       file:
-        path: "{{ jenkins_artifacts_directory }"
+        path: "{{ jenkins_artifacts_directory }}"
         state: directory
       when: jenkins_download_artifacts | bool
 
