fix looping over artifacts

--- a/puppet/modules/jenkins_job_builder/files/centos.org/ansible/jenkins_job.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/ansible/jenkins_job.yml
@@ -113,8 +113,7 @@
       get_url:
         url: "{{ jenkins_host }}/job/{{ jenkins_job_name }}/{{ poll_result.json.executable.number }}/artifact/{{ item.relativePath }}"
         dest: "{{ jenkins_artifacts_directory}}/{{ item.fileName }}"
-      loop:
-        - "{{ build_job_result.json.artifacts }}"
+      loop: "{{ build_job_result.json.artifacts }}"
       when: jenkins_download_artifacts | bool
 
     - fail:
