split plugins pipeline into sepeate pipes
Fixes: #1162

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-release.yaml
@@ -34,11 +34,28 @@
         - 'pipelines/lib/rpm_packaging.groovy{empty}'
         - 'pipelines/lib/release.groovy{empty}'
 
+- job-template:
+    name: 'foreman-plugins-{version}-rpm-pipeline'
+    project-type: pipeline
+    sandbox: true
+    triggers:
+      - timed: 'H 21 * * *'
+    dsl:
+      !include-raw:
+        - 'pipelines/vars/foreman/{version}.groovy'
+        - 'pipelines/release/plugins.groovy{empty}'
+        - 'pipelines/lib/rvm.groovy{empty}'
+        - 'pipelines/lib/ansible.groovy{empty}'
+        - 'pipelines/lib/obal.groovy{empty}'
+        - 'pipelines/lib/rpm_packaging.groovy{empty}'
+        - 'pipelines/lib/release.groovy{empty}'
+
 - project:
     name: foreman
     jobs:
       - 'foreman-{version}-release-pipeline'
       - 'foreman-client-{version}-rpm-pipeline'
+      - 'foreman-plugins-{version}-rpm-pipeline'
     empty: ''
     version:
       - '1.21'
@@ -51,6 +68,7 @@
     name: foreman-nightly
     jobs:
       - 'foreman-client-{version}-rpm-pipeline'
+      - 'foreman-plugins-{version}-rpm-pipeline'
     empty: ''
     version:
       - 'nightly'
